# example-rust

./: Cargo.toml
.github/workflows/: deploy.yaml
src/: main.rs
