[package]
name = "example-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build]
jobs = 1

[term]
quiet = true
color = 'never'

[profile.release]
opt-level = 1
codegen-units = 4
strip = "symbols"
panic = "abort"
lto = "off"